--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:Dhiraj123@localhost:5432/postgres
+DATABASE_URL=postgresql://todo_user:dQ8n9FVVj48qXtERvfxYm89MJZQuY0KE@dpg-d5oubo7gi27c73fnf1ng-a/todo_db_wn9ores
 NODE_ENV=production
