--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,13 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@prisma/client": "^7.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^9.0.2",
     "morgan": "^1.10.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "prisma": "^7.3.0"
   }
 }
