--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "postinstall": "prisma generate --schema=./prisma/schema.prisma"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -20,5 +21,8 @@
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "prisma": "^7.3.0"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.16.0"
   }
 }
